--- a/app/configs/config.php.example
+++ b/app/configs/config.php.example
@@ -1,5 +1,6 @@
 <?php
 $config['base_url'] = '/';
+$config['profiler'] = false;
 $config['db']['host'] = 'localhost';
 $config['db']['db'] = 'money';
 $config['db']['user'] = 'root';
